src/snapshots/afrotd__parser__tests__interpretation_7.1.2_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 1
  - 2
index: 4
text: "Team A ist in einer No Huddle Offense und alle Spieler bewegen\nsich zur Scrimmage Line, als der Ball freigegeben wird. Obwohl einige\nSpieler sich in ihren Positionen aufstellen und stoppen, bewegt sich wenigstens ein Spieler ohne zu stoppen weiter und bewegt sich weiterhin,\nals der Ball gesnappt wird."
ruling: "Dead Ball Foul – illegaler Shift,\nder in einem Fehlstart resultiert, da Team A die eine Sekunde Stillstand\nvor dem Snap nicht eingehalten hat. Strafe – 5 Meter vom Succeeding\nSpot. Die Schiedsrichter müssen abpfeifen und das Spiel stoppen."
