src/snapshots/afrotd__parser__tests__interpretation_7.1.2_6.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 1
  - 2
index: 6
text: "1. und 10 von der A-25. Defender B70 hat sich mit seiner rechten Hand und seinem Helm in der neutralen Zone aufgestellt. Als die\nPlay Clock runterläuft, richtet sich der eingeschränkte Lineman A77 auf\nund berührt B70."
ruling: "Dead Ball Foul. Fehlstart durch A77, das\nin einem 1. und 15 an der A-20 resultiert. In diesem Spielzug hat sich\ndie Defense in der neutralen Zone aufgestellt, ohne dass es eine sofortige Reaktion der Offense gibt. Und wenn dann schließlich die Offense\nsich bewegt, um den Defender zu berühren, ist das ein Fehlstart der\nOffense (Regel 7.1.2.b.3)"
