src/snapshots/afrotd__parser__tests__interpretation_7.1.3_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 1
  - 3
index: 1
text: "A21 hat sich legal am Ende der Scrimmage Line in der Nähe von\nA88 aufgestellt, der in einem Drei-Punkt-Stand steht. Team A steht in\ndieser Formation für eine Sekunde still. Danach bewegt sich A21 zu\neiner legalen Backfield Position und stoppt. Anschließend bewegt sich\nA88 zu einer entfernteren Position an der Scrimmage Line."
ruling: "Legal, wenn beide, A21 und A88, still stehen, wenn der Snap beginnt\n(Regeln 2.22.1 und 7.1.4.a)."
