src/snapshots/afrotd__parser__tests__interpretation_7.1.3_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 1
  - 3
index: 2
text: "A21 hat sich legal am Ende der Scrimmage Line in der Nähe von\nA88 aufgestellt, der in einem Drei-Punkt-Stand steht. Team A steht in\ndieser Formation für eine Sekunde still. Danach verlässt A21 die Scrimmage Line und bewegt sich ins Backfield. A88 bewegt sich zu einer entfernteren Position an der Scrimmage Line."
ruling: "A88 kann seinen\nDrei-Punkt-Stand aufgeben, da er sich jetzt am Ende der Scrimmage Line befindet. Aber Team A muss vor dem Snap erneut für eine Sekunde\nstill stehen, damit der Spielzug legal wird (Regel 7.1.4)."
