src/snapshots/afrotd__parser__tests__interpretation_7.1.3_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 1
  - 3
index: 3
text: "B71 überquert die neutrale Zone in Team A’s Backfield und\ngreift keinen Team A-Spieler an. A23, legal im Backfield, bewegt sich\nabsichtlich, um B71 zu berühren."
ruling: "Team A-Foul, Fehlstart.\nStrafe – 5 Meter vom Succeeding Spot."
