src/snapshots/afrotd__parser__tests__interpretation_7.1.3_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 1
  - 3
index: 4
text: "Snapper A1 hebt den Ball an oder bewegt ihn vorwärts, bevor\ndie Rückwärtsbewegung des Snaps beginnt. B2 schlägt den Ball weg,\nso dass er frei wird, wegrollt und von B3 recovert wird."
ruling: "Team\nA-Foul. Illegaler Snap, Ball bleibt dead. Strafe - 5 Meter vom Succeeding Spot (Regel 4.1.1)."
