src/snapshots/afrotd__parser__tests__interpretation_7.1.3_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 1
  - 3
index: 5
text: "A66, ein eingeschränkter Lineman zwischen dem Snapper und\ndem Spieler am Ende der Line oder A72, ein eingeschränkter Spieler\nam Ende der Scrimmage Line:\n1. hebt eine Hand oder die Hände vom Boden, als er von B1, der\nsich in der neutralen Zone befindet, bedroht wird."
ruling: "Sofort abpfeifen. Team B Dead Ball Foul, Offside. Strafe – 5 Meter vom Succeeding Spot.\n2. hebt eine Hand oder die Hände vom Boden, als B1 a) auf ihn\nzu stürmt, aber nicht in die neutrale Zone eindringt oder b) in die\nneutrale Zone eindringt, aber nicht die Position von A66 oder A72\nbedroht.\nRegelung: In beiden Fällen sofort abpfeifen. Team A Dead Ball\nFouls. Strafe – 5 Meter vom Succeeding Spot.\nBeachte: Ein Team B-Spieler, der vor dem Snap in die neutrale Zone eindringt, kann maximal drei Team A-Linemen angreifen. Wenn der\nTeam B-Spieler die neutrale Zone in Richtung eines direkt gegenüberstehenden Team A-Lineman betritt, gelten dieser Team A-Spieler und\ndie beiden rechts und links danebenstehenden Linemen als angegriffen. Wenn der Team B-Spieler die neutrale Zone in Richtung einer Lücke\nzwischen zwei Team A-Linemen betritt, gelten nur diese beiden Team\nA-Spieler als angegriffen."
