src/snapshots/afrotd__parser__tests__interpretation_7.1.4_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 1
  - 4
index: 1
text: "A30, der sich als ein Back aufgestellt hat, startet seine legale Bewegung. Er dreht sich dann so, dass er in Richtung seiner Scrimmage\nLine schaut und sich seitlich bewegt. Beim Snap hat sich A30 leicht vorgebeugt und bewegt sich entweder weiter seitlich oder verharrt an einer\nStelle."
ruling: Legal.
